// Vitest Snapshot v1

exports[`<AnalysesToolbar /> > should render with [canModify=false] 1`] = `
<Toolbar>
  <ForwardRef
    onChange={[Function]}
    value="baz"
  />
  <Button
    color="blue"
    disabled={true}
    icon="plus-square fa-fw"
    onClick={[Function]}
    tip="New Analysis"
  />
</Toolbar>
`;

exports[`<AnalysesToolbar /> > should render with default props 1`] = `
<Toolbar>
  <ForwardRef
    onChange={[Function]}
    value="baz"
  />
  <Button
    color="blue"
    disabled={false}
    icon="plus-square fa-fw"
    onClick={[Function]}
    tip="New Analysis"
  />
</Toolbar>
`;
